--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -1,3 +1,4 @@
+
 global
         daemon
         user root
@@ -17,9 +18,47 @@ listen funnel_proxy
         default_backend doxycannon
 
 backend doxycannon
-        server doxy 127.0.0.1:5000 check
-        server doxy 127.0.0.1:5001 check
-        server doxy 127.0.0.1:5002 check
-        server doxy 127.0.0.1:5003 check
-        server doxy 127.0.0.1:5004 check
-        server doxy 127.0.0.1:5005 check
+	server doxy5000 127.0.0.1:5000 check
+	server doxy5001 127.0.0.1:5001 check
+	server doxy5002 127.0.0.1:5002 check
+	server doxy5003 127.0.0.1:5003 check
+	server doxy5004 127.0.0.1:5004 check
+	server doxy5005 127.0.0.1:5005 check
+	server doxy5006 127.0.0.1:5006 check
+	server doxy5007 127.0.0.1:5007 check
+	server doxy5008 127.0.0.1:5008 check
+	server doxy5009 127.0.0.1:5009 check
+	server doxy5010 127.0.0.1:5010 check
+	server doxy5011 127.0.0.1:5011 check
+	server doxy5012 127.0.0.1:5012 check
+	server doxy5013 127.0.0.1:5013 check
+	server doxy5014 127.0.0.1:5014 check
+	server doxy5015 127.0.0.1:5015 check
+	server doxy5016 127.0.0.1:5016 check
+	server doxy5017 127.0.0.1:5017 check
+	server doxy5018 127.0.0.1:5018 check
+	server doxy5019 127.0.0.1:5019 check
+	server doxy5020 127.0.0.1:5020 check
+	server doxy5021 127.0.0.1:5021 check
+	server doxy5022 127.0.0.1:5022 check
+	server doxy5023 127.0.0.1:5023 check
+	server doxy5024 127.0.0.1:5024 check
+	server doxy5025 127.0.0.1:5025 check
+	server doxy5026 127.0.0.1:5026 check
+	server doxy5027 127.0.0.1:5027 check
+	server doxy5028 127.0.0.1:5028 check
+	server doxy5029 127.0.0.1:5029 check
+	server doxy5030 127.0.0.1:5030 check
+	server doxy5031 127.0.0.1:5031 check
+	server doxy5032 127.0.0.1:5032 check
+	server doxy5033 127.0.0.1:5033 check
+	server doxy5034 127.0.0.1:5034 check
+	server doxy5035 127.0.0.1:5035 check
+	server doxy5036 127.0.0.1:5036 check
+	server doxy5037 127.0.0.1:5037 check
+	server doxy5038 127.0.0.1:5038 check
+	server doxy5039 127.0.0.1:5039 check
+	server doxy5040 127.0.0.1:5040 check
+	server doxy5041 127.0.0.1:5041 check
+	server doxy5042 127.0.0.1:5042 check
+	server doxy5043 127.0.0.1:5043 check
